# tweet-finder

./: .gitignore  README.md  crypto_sentiment_analysis.py  requirements.txt
.github/workflows/: cron-analysis.yml
crews/crypto_research/: README.md  pyproject.toml
crews/crypto_research/src/crypto_research/: crew.py  main.py
crews/crypto_research/src/crypto_research/config/: agents.yaml  tasks.yaml
