[project]
name = "crypto_research"
version = "0.1.0"
description = "crypto-research using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
crypto_research = "crypto_research.main:run"
run_crew = "crypto_research.main:run"
train = "crypto_research.main:train"
replay = "crypto_research.main:replay"
test = "crypto_research.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
